--- a/.prow/provider-vcloud-director.yaml
+++ b/.prow/provider-vcloud-director.yaml
@@ -14,24 +14,28 @@
 
 presubmits:
   - name: pull-machine-controller-e2e-vmware-cloud-director
-    always_run: false
-    run_if_changed: "(pkg/cloudprovider/provider/vcloud-director/|pkg/userdata)"
+    always_run: true
     decorate: true
     error_on_eviction: true
-    clone_uri: "ssh://git@github.com/kubermatic/machine-controller.git"
+    clone_uri: "(pkg/cloudprovider/provider/vcloud-director/|pkg/userdata)"
     labels:
+      preset-vcloud-director: "true"
       preset-hetzner: "true"
       preset-e2e-ssh: "true"
-      preset-vcloud-director: "true"
       preset-rhel: "true"
       preset-goproxy: "true"
+      preset-kind-volume-mounts: "true"
+      preset-docker-mirror: "true"
+      preset-kubeconfig-ci: "true"
     spec:
       containers:
-        - image: golang:1.18.2
+        - image: quay.io/kubermatic/build:go-1.18-node-16-kind-0.14-5
           command:
-            - "./hack/ci-e2e-test.sh"
+            - "./hack/ci/run-e2e-tests.sh"
           args:
             - "TestVMwareCloudDirectorProvisioningE2E"
+          securityContext:
+            privileged: true
           resources:
             requests:
               memory: 1Gi
