add rockylinux to equinixmetal
Signed-off-by: Moath Qasim <moad.qassem@gmail.com>

--- a/test/e2e/provisioning/testdata/machinedeployment-equinixmetal.yaml
+++ b/test/e2e/provisioning/testdata/machinedeployment-equinixmetal.yaml
@@ -26,7 +26,7 @@ spec:
           cloudProviderSpec:
             token: << METAL_AUTH_TOKEN >>
             projectID: << METAL_PROJECT_ID >>
-            instanceType: "m3.small.x86"
+            instanceType: "c3.small.x86"
             facilities:
             - "am6"
           operatingSystem: "<< OS_NAME >>"
