--- a/pkg/userdata/amzn2/testdata/kubelet-v1.23-vsphere-proxy.yaml
+++ b/pkg/userdata/amzn2/testdata/kubelet-v1.23-vsphere-proxy.yaml
@@ -1,6 +1,4 @@
 #cloud-config
-bootcmd:
-- modprobe ip_tables
 
 hostname: node1
 
@@ -77,8 +75,9 @@ write_files:
     systemctl restart systemd-modules-load.service
     sysctl --system
 
-
     hostnamectl set-hostname node1
+
+
     yum install -y \
       device-mapper-persistent-data \
       lvm2 \
@@ -90,13 +89,9 @@ write_files:
       socat \
       wget \
       curl \
-      tar \
       open-vm-tools \
       ipvsadm
 
-    yum install -y yum-utils
-    yum-config-manager --add-repo=https://download.docker.com/linux/centos/docker-ce.repo
-    yum-config-manager --save --setopt=docker-ce-stable.module_hotfixes=true
 
     mkdir -p /etc/systemd/system/containerd.service.d /etc/systemd/system/docker.service.d
 
@@ -107,14 +102,14 @@ write_files:
     EOF
 
     yum install -y \
-        docker-ce-cli-19.03* \
-        containerd.io-1.4* \
-        docker-ce-19.03* \
+        containerd-1.4* \
+        docker-19.03* \
         yum-plugin-versionlock
-    yum versionlock add docker-ce* containerd.io
+    yum versionlock add docker containerd
 
     systemctl daemon-reload
     systemctl enable --now docker
+
 
     opt_bin=/opt/bin
     usr_local_bin=/usr/local/bin
@@ -157,7 +152,7 @@ write_files:
     rm -f "$cri_tools_filename"
     ln -sf "$opt_bin/crictl" "$usr_local_bin"/crictl || echo "symbolic link is skipped"
     cd -
-    KUBE_VERSION="${KUBE_VERSION:-v1.21.10}"
+    KUBE_VERSION="${KUBE_VERSION:-v1.23.5}"
     kube_dir="$opt_bin/kubernetes-$KUBE_VERSION"
     kube_base_url="https://storage.googleapis.com/kubernetes-release/release/$KUBE_VERSION/bin/linux/$arch"
     kube_sum_file="$kube_dir/sha256"
@@ -247,8 +242,6 @@ write_files:
       --pod-infra-container-image=192.168.100.100:5000/kubernetes/pause:v3.1 \
       --container-runtime=docker \
       --container-runtime-endpoint=unix:///var/run/dockershim.sock \
-      --dynamic-config-dir=/etc/kubernetes/dynamic-config-dir \
-      --feature-gates=DynamicKubeletConfig=true \
       --network-plugin=cni \
       --node-ip ${KUBELET_NODE_IP}
 
