--- a/pkg/userdata/centos/testdata/kubelet-v1.23-vsphere.yaml
+++ b/pkg/userdata/centos/testdata/kubelet-v1.23-vsphere.yaml
@@ -1,6 +1,6 @@
 #cloud-config
-bootcmd:
-- modprobe ip_tables
+
+hostname: node1
 
 
 ssh_pwauth: false
@@ -67,6 +67,15 @@ write_files:
     systemctl restart systemd-modules-load.service
     sysctl --system
 
+
+    hostnamectl set-hostname node1
+
+    source /etc/os-release
+    if [ "$ID" == "centos" ] && [ "$VERSION_ID" == "8" ]; then
+      sudo sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-*
+      sudo sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*
+    fi
+
     yum install -y \
       device-mapper-persistent-data \
       lvm2 \
@@ -78,7 +87,7 @@ write_files:
       socat \
       wget \
       curl \
-      tar \
+      open-vm-tools \
       ipvsadm
 
     yum install -y yum-utils
@@ -102,6 +111,7 @@ write_files:
 
     systemctl daemon-reload
     systemctl enable --now docker
+
 
     opt_bin=/opt/bin
     usr_local_bin=/usr/local/bin
@@ -144,7 +154,7 @@ write_files:
     rm -f "$cri_tools_filename"
     ln -sf "$opt_bin/crictl" "$usr_local_bin"/crictl || echo "symbolic link is skipped"
     cd -
-    KUBE_VERSION="${KUBE_VERSION:-v1.21.10}"
+    KUBE_VERSION="${KUBE_VERSION:-v1.23.5}"
     kube_dir="$opt_bin/kubernetes-$KUBE_VERSION"
     kube_base_url="https://storage.googleapis.com/kubernetes-release/release/$KUBE_VERSION/bin/linux/$arch"
     kube_sum_file="$kube_dir/sha256"
@@ -173,6 +183,8 @@ write_files:
     /opt/bin/setup_net_env.sh
 
     systemctl disable --now firewalld || true
+
+    systemctl enable --now vmtoolsd.service
     systemctl enable --now kubelet
     systemctl enable --now --no-block kubelet-healthcheck.service
     systemctl disable setup.service
@@ -224,14 +236,13 @@ write_files:
       --kubeconfig=/var/lib/kubelet/kubeconfig \
       --config=/etc/kubernetes/kubelet.conf \
       --cert-dir=/etc/kubernetes/pki \
-      --cloud-provider=aws \
+      --cloud-provider=vsphere \
       --cloud-config=/etc/kubernetes/cloud-config \
+      --hostname-override=node1 \
       --exit-on-lock-contention \
       --lock-file=/tmp/kubelet.lock \
       --container-runtime=docker \
       --container-runtime-endpoint=unix:///var/run/dockershim.sock \
-      --dynamic-config-dir=/etc/kubernetes/dynamic-config-dir \
-      --feature-gates=DynamicKubeletConfig=true \
       --network-plugin=cni \
       --node-ip ${KUBELET_NODE_IP}
 
@@ -241,7 +252,7 @@ write_files:
 - path: "/etc/kubernetes/cloud-config"
   permissions: "0600"
   content: |
-    {aws-config:true}
+    {config:true}
 
 - path: "/opt/bin/setup_net_env.sh"
   permissions: "0755"
