--- a/pkg/userdata/rockylinux/testdata/kubelet-v1.23-vsphere.yaml
+++ b/pkg/userdata/rockylinux/testdata/kubelet-v1.23-vsphere.yaml
@@ -1,4 +1,6 @@
 #cloud-config
+bootcmd:
+- modprobe ip_tables
 
 hostname: node1
 
@@ -67,9 +69,8 @@ write_files:
     systemctl restart systemd-modules-load.service
     sysctl --system
 
+
     hostnamectl set-hostname node1
-
-
     yum install -y \
       device-mapper-persistent-data \
       lvm2 \
@@ -81,9 +82,13 @@ write_files:
       socat \
       wget \
       curl \
+      tar \
       open-vm-tools \
       ipvsadm
 
+    yum install -y yum-utils
+    yum-config-manager --add-repo=https://download.docker.com/linux/centos/docker-ce.repo
+    yum-config-manager --save --setopt=docker-ce-stable.module_hotfixes=true
 
     mkdir -p /etc/systemd/system/containerd.service.d /etc/systemd/system/docker.service.d
 
@@ -94,14 +99,14 @@ write_files:
     EOF
 
     yum install -y \
-        containerd-1.4* \
-        docker-19.03* \
+        docker-ce-cli-19.03* \
+        containerd.io-1.4* \
+        docker-ce-19.03* \
         yum-plugin-versionlock
-    yum versionlock add docker containerd
+    yum versionlock add docker-ce* containerd.io
 
     systemctl daemon-reload
     systemctl enable --now docker
-
 
     opt_bin=/opt/bin
     usr_local_bin=/usr/local/bin
@@ -144,7 +149,7 @@ write_files:
     rm -f "$cri_tools_filename"
     ln -sf "$opt_bin/crictl" "$usr_local_bin"/crictl || echo "symbolic link is skipped"
     cd -
-    KUBE_VERSION="${KUBE_VERSION:-v1.21.8}"
+    KUBE_VERSION="${KUBE_VERSION:-v1.23.5}"
     kube_dir="$opt_bin/kubernetes-$KUBE_VERSION"
     kube_base_url="https://storage.googleapis.com/kubernetes-release/release/$KUBE_VERSION/bin/linux/$arch"
     kube_sum_file="$kube_dir/sha256"
@@ -233,8 +238,6 @@ write_files:
       --lock-file=/tmp/kubelet.lock \
       --container-runtime=docker \
       --container-runtime-endpoint=unix:///var/run/dockershim.sock \
-      --dynamic-config-dir=/etc/kubernetes/dynamic-config-dir \
-      --feature-gates=DynamicKubeletConfig=true \
       --network-plugin=cni \
       --node-ip ${KUBELET_NODE_IP}
 
