--- a/.prow/provider-aws.yaml
+++ b/.prow/provider-aws.yaml
@@ -29,7 +29,7 @@ presubmits:
       preset-kubeconfig-ci: "true"
     spec:
       containers:
-        - image: quay.io/kubermatic/build:go-1.18-node-16-kind-0.14-5
+        - image: quay.io/kubermatic/build:go-1.18-node-16-kind-0.14-9
           command:
             - "./hack/ci/run-e2e-tests.sh"
           args:
@@ -38,8 +38,10 @@ presubmits:
             privileged: true
           resources:
             requests:
-              memory: 4Gi
+              memory: 3Gi
               cpu: 1
+            limits:
+              memory: 3Gi
 
   - name: pull-machine-controller-e2e-aws-arm
     always_run: true
@@ -56,7 +58,7 @@ presubmits:
       preset-kubeconfig-ci: "true"
     spec:
       containers:
-        - image: quay.io/kubermatic/build:go-1.18-node-16-kind-0.14-5
+        - image: quay.io/kubermatic/build:go-1.18-node-16-kind-0.14-9
           command:
             - "./hack/ci/run-e2e-tests.sh"
           args:
@@ -65,8 +67,10 @@ presubmits:
             privileged: true
           resources:
             requests:
-              memory: 1Gi
-              cpu: 500m
+              memory: 3Gi
+              cpu: 1
+            limits:
+              memory: 3Gi
 
   - name: pull-machine-controller-e2e-aws-ebs-encryption-enabled
     always_run: true
@@ -83,7 +87,7 @@ presubmits:
       preset-kubeconfig-ci: "true"
     spec:
       containers:
-        - image: quay.io/kubermatic/build:go-1.18-node-16-kind-0.14-5
+        - image: quay.io/kubermatic/build:go-1.18-node-16-kind-0.14-9
           command:
             - "./hack/ci/run-e2e-tests.sh"
           args:
@@ -92,8 +96,10 @@ presubmits:
             privileged: true
           resources:
             requests:
-              memory: 1Gi
-              cpu: 500m
+              memory: 3Gi
+              cpu: 1
+            limits:
+              memory: 3Gi
 
   - name: pull-machine-controller-e2e-aws-flatcar-containerd
     always_run: true
@@ -110,7 +116,7 @@ presubmits:
       preset-kubeconfig-ci: "true"
     spec:
       containers:
-        - image: quay.io/kubermatic/build:go-1.18-node-16-kind-0.14-5
+        - image: quay.io/kubermatic/build:go-1.18-node-16-kind-0.14-9
           command:
             - "./hack/ci/run-e2e-tests.sh"
           args:
@@ -119,8 +125,10 @@ presubmits:
             privileged: true
           resources:
             requests:
-              memory: 1Gi
-              cpu: 500m
+              memory: 3Gi
+              cpu: 1
+            limits:
+              memory: 3Gi
 
   - name: pull-machine-controller-e2e-aws-spot-instance
     always_run: true
@@ -138,7 +146,7 @@ presubmits:
       preset-kubeconfig-ci: "true"
     spec:
       containers:
-        - image: quay.io/kubermatic/build:go-1.18-node-16-kind-0.14-5
+        - image: quay.io/kubermatic/build:go-1.18-node-16-kind-0.14-9
           command:
             - "./hack/ci/run-e2e-tests.sh"
           args:
@@ -147,8 +155,10 @@ presubmits:
             privileged: true
           resources:
             requests:
-              memory: 1Gi
-              cpu: 500m
+              memory: 3Gi
+              cpu: 1
+            limits:
+              memory: 3Gi
 
   - name: pull-machine-controller-e2e-aws-sles
     always_run: false
@@ -165,7 +175,7 @@ presubmits:
       preset-kubeconfig-ci: "true"
     spec:
       containers:
-        - image: quay.io/kubermatic/build:go-1.18-node-16-kind-0.14-5
+        - image: quay.io/kubermatic/build:go-1.18-node-16-kind-0.14-9
           command:
             - "./hack/ci/run-e2e-tests.sh"
           args:
@@ -174,8 +184,10 @@ presubmits:
             privileged: true
           resources:
             requests:
-              memory: 1Gi
-              cpu: 500m
+              memory: 3Gi
+              cpu: 1
+            limits:
+              memory: 3Gi
 
   - name: pull-machine-controller-e2e-aws-flatcar-coreos-cloud-init
     always_run: false
@@ -192,7 +204,7 @@ presubmits:
       preset-kubeconfig-ci: "true"
     spec:
       containers:
-        - image: quay.io/kubermatic/build:go-1.18-node-16-kind-0.14-5
+        - image: quay.io/kubermatic/build:go-1.18-node-16-kind-0.14-9
           command:
             - "./hack/ci/run-e2e-tests.sh"
           args:
@@ -201,8 +213,10 @@ presubmits:
             privileged: true
           resources:
             requests:
-              memory: 1Gi
-              cpu: 500m
+              memory: 3Gi
+              cpu: 1
+            limits:
+              memory: 3Gi
 
   - name: pull-machine-controller-e2e-aws-centos8
     always_run: false
@@ -219,7 +233,7 @@ presubmits:
       preset-kubeconfig-ci: "true"
     spec:
       containers:
-        - image: quay.io/kubermatic/build:go-1.18-node-16-kind-0.14-5
+        - image: quay.io/kubermatic/build:go-1.18-node-16-kind-0.14-9
           command:
             - "./hack/ci/run-e2e-tests.sh"
           args:
@@ -228,8 +242,10 @@ presubmits:
             privileged: true
           resources:
             requests:
-              memory: 1Gi
-              cpu: 500m
+              memory: 3Gi
+              cpu: 1
+            limits:
+              memory: 3Gi
 
   - name: pull-machine-controller-e2e-aws-assume-role
     always_run: false
@@ -246,7 +262,7 @@ presubmits:
       preset-kubeconfig-ci: "true"
     spec:
       containers:
-        - image: quay.io/kubermatic/build:go-1.18-node-16-kind-0.14-5
+        - image: quay.io/kubermatic/build:go-1.18-node-16-kind-0.14-9
           command:
             - "./hack/ci/run-e2e-tests.sh"
           args:
@@ -255,5 +271,7 @@ presubmits:
             privileged: true
           resources:
             requests:
-              memory: 1Gi
-              cpu: 500m
+              memory: 3Gi
+              cpu: 1
+            limits:
+              memory: 3Gi
