--- a/.prow/provider-linode.yaml
+++ b/.prow/provider-linode.yaml
@@ -37,5 +37,7 @@ presubmits:
             privileged: true
           resources:
             requests:
-              memory: 1Gi
-              cpu: 500m
+              memory: 6Gi
+              cpu: 2
+            limits:
+              memory: 6Gi
